Dialog: fix overflow issue when in panel/actionsheet

--- a/presenters/dialog/style.less
+++ b/presenters/dialog/style.less
@@ -151,3 +151,7 @@
 	width: auto !important;
 	font-size: 1.2em;
 }
+
+b-panel .dialog {
+	display: contents;
+}
